Fix distorted images in content, rebuild

--- a/src/styles/partials/_type.scss
+++ b/src/styles/partials/_type.scss
@@ -219,6 +219,7 @@ mark,
 
   img {
     width: 100%; // force width;
+    height: auto;
     max-width: none;
   }
 }
